# bsr

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  changer.cpp  changer.hpp  main.cpp  options.cpp  options.hpp  search.cpp  search.hpp  task.cpp  task.hpp
test/: CMakeLists.txt  test_changer.cpp  test_options.cpp  test_search.cpp  test_task.cpp
